# zenit

./: .gitignore  Cargo.toml  README.md  TODO.txt  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: unit-tests-linux.yml  unit-tests-windows.yml  unit-tests.yml
crates/zenit/: Cargo.toml  build.rs
crates/zenit/assets/: README.md
crates/zenit/assets/builtin/: zenit_builtin.toml
crates/zenit/assets/builtin/shaders/: camera.inc.wgsl  imgui.wgsl  skybox.wgsl
crates/zenit/assets/builtin/shaders/shared/: camera.inc.wgsl  globals.inc.wgsl
crates/zenit/src/: cli.rs  engine.rs  main.rs  profiler.rs  render.rs
crates/zenit/src/assets/: asset_manager.rs  builtin.rs  game_root.rs  manager.rs  mod.rs  root.rs  texture.rs
crates/zenit/src/assets/asset_loader/: mod.rs  shader_loader.rs  texture_loader.rs
crates/zenit/src/crash/: mod.rs  windows.rs
crates/zenit/src/devui/: imgui_demo.rs  imgui_ext.rs  menu_bar.rs  mod.rs
crates/zenit/src/devui/viewers/: mod.rs  model_preview.rs
crates/zenit/src/devui/viewers/renderer_viewer/: mod.rs  shader_viewer.rs  texture_viewer.rs
crates/zenit/src/ecs/: accessor.rs  macros.rs  mod.rs  universe.rs
crates/zenit/src/ecs/components/: mod.rs  transform.rs
crates/zenit/src/engine/: bus.rs  frame_profiler.rs  mod.rs  runner.rs
crates/zenit/src/entities/: accessor.rs  builder.rs  mod.rs  universe.rs
crates/zenit/src/entities/components/: mod.rs  transform.rs
crates/zenit/src/graphics/: device_context.rs  egui_support.rs  frame_state.rs  imgui_renderer.rs  interface.rs  macros.rs  mod.rs  scene.rs  scene_builder.rs  system.rs
crates/zenit/src/graphics/resources/: camera_resource.rs  cubemap_resource.rs  mod.rs  shader_resource.rs  skybox_resource.rs  texture_resource.rs
crates/zenit/src/platform/: mod.rs
crates/zenit/src/render/: api.rs  camera.rs  frame_state.rs  macros.rs  mod.rs  scene.rs  system.rs  texture.rs
crates/zenit/src/render/components/: camera.rs  mod.rs  scene.rs
crates/zenit/src/render/resources/: camera.rs  mod.rs  model.rs  shader.rs  skybox.rs  texture.rs
crates/zenit/src/scene/: mod.rs  scene_builder.rs  system.rs
crates/zenit_lua/: Cargo.toml
crates/zenit_lua/src/: lib.rs
crates/zenit_lua/tests/: README.md  basic.lua  basic.luac
crates/zenit_lvl/: Cargo.toml
crates/zenit_lvl/src/: config.rs  lib.rs  node.rs
crates/zenit_lvl/src/config/: mod.rs  read.rs
crates/zenit_lvl/src/game/: mod.rs  model.rs  pack.rs  script.rs  texture.rs
crates/zenit_lvl/src/node/: builder.rs  name.rs
crates/zenit_lvl/src/raw/: pack.rs  texture.rs
crates/zenit_lvl/src/zext/: mod.rs
crates/zenit_mdk/: Cargo.toml
crates/zenit_mdk/src/: lib.rs  main.rs
crates/zenit_mdk/src/commands/: append.rs  build.rs  export.rs  merge.rs  mod.rs
crates/zenit_mdk/src/exporter/: mod.rs  shader.rs
crates/zenit_mdk/src/exporter/texture/: converter.rs  mod.rs
format_book/: book.toml
lua/: README.txt
lua/src/: lcode.h  (+15 more)
src/: args.rs  console.rs  devui.rs  engine.rs  level_data.rs  loading.rs  lua.rs  main.rs  munge.rs  namespace.rs  renderer.rs  shell.rs  utils.rs
src/zenit/: Cargo.toml  build.rs
src/zenit/assets/shaders/: blank.shader  example_triangle.shader  shader_base.inc  shared_camera.inc  skybox.shader
src/zenit/src/: cli.rs  engine.rs  main.rs  main_window.rs  render.rs  root.rs  schedule.rs  scheduling.rs
src/zenit/src/assets/: mod.rs
src/zenit/src/assets/texture/: convert.rs  mod.rs
src/zenit/src/crash/: mod.rs  windows.rs
src/zenit/src/ctpanel/: ext.rs  message_box.rs  mod.rs  root_select.rs  side.rs  texture_viewer.rs  top.rs
src/zenit/src/ctpanel/data_viewer/: mod.rs
src/zenit/src/ctpanel/utils/: graph.rs
src/zenit/src/engine/: builder.rs  data.rs  mod.rs  system.rs
src/zenit/src/platform/: mod.rs
src/zenit/src/platform/windows/: mod.rs  zenit.exe.manifest  zenit.rc
src/zenit/src/profiling/: frame_profiler.rs  mod.rs
src/zenit/src/render/: interface.rs  mipmaps.rs  mod.rs  scenario.rs  shaders.rs  utils.rs  viewport.rs
src/zenit/src/render/base/: context.rs  mod.rs  screen.rs  shaders.rs  surface.rs  swapchain.rs  target.rs  texture.rs  utils.rs
src/zenit/src/render/layers/: blank_layer.rs  egui_layer.rs  example.rs  mod.rs
src/zenit/src/render/pipelines/: camera.rs  mod.rs  skybox.rs
src/zenit/src/render/scene/: mod.rs  schedule.rs
src/zenit/src/scene/: blank.rs  ecs.rs  mod.rs  node.rs  signal.rs
src/zenit/src/scene/ecs/: allocator.rs  component.rs  mod.rs  pool.rs
src/zenit_lua/: Cargo.toml  build.rs
src/zenit_lua/lua/: README.txt  wrapper.h
src/zenit_lua/lua/include/: lua.h  lualib.h
src/zenit_lua/lua/src/: lapi.c  lapi.h  lcode.c  ldebug.c  ldo.c  ldo.h  lgc.c  lgc.h  llex.c  llimits.h  lmem.c  lmem.h  lobject.h  lparser.c  lstring.c  lstring.h  ltable.c  ltable.h  ltests.c  ltm.h  lvm.c  lvm.h  lzenit.h  lzio.c  lzio.h
src/zenit_lua/lua/src/lib/: ldblib.c  loadlib.c  ltablib.c
src/zenit_lua/src/: chunk.rs  lib.rs
src/zenit_lvl/: Cargo.toml
src/zenit_lvl/src/: level.rs  lib.rs  model.rs  node.rs  optional.rs  script.rs  texture.rs
src/zenit_lvl/src/config/: mod.rs
src/zenit_lvl/src/node/: builder.rs  mod.rs  name.rs  read.rs  reader.rs
src/zenit_lvl/src/node/parser/: macros.rs  mod.rs  parse.rs
src/zenit_lvl/src/raw/: mod.rs  model.rs  optional.rs  pack.rs  script.rs  texture.rs
src/zenit_lvl_core/: Cargo.toml
src/zenit_lvl_core/src/: lib.rs
src/zenit_lvl_core/src/config/: mod.rs
src/zenit_lvl_core/src/node/: builder.rs  from.rs  mod.rs  name.rs  parser.rs  read.rs  reader.rs
src/zenit_render/: Cargo.toml  build.rs
src/zenit_render/assets/shaders/: example_triangle.shader
src/zenit_render/src/: lib.rs
src/zenit_render/src/base/: context.rs  mod.rs  screen.rs  shaders.rs  swapchain.rs  target.rs  texture.rs  utils.rs
src/zenit_render/src/example/: mod.rs
src/zenit_render/src/layers/: egui_layer.rs  mod.rs
src/zenit_viewer/: Cargo.toml  README.md  build.rs
src/zenit_viewer/src/: main.rs
src/zenit_viewer/src/viewers/: mod.rs
src/zenit_viewer/src/views/: files_view.rs  mod.rs  textures_view.rs
(+88 files in other folders)
