[package]
name = "zenit"
version = "0.1.0"
edition = "2021"
authors = ["Natalia Cholewa <natanalt@protonmail.com>"]
description = "Open source implementation of the classic SWBF2 engine"
build = "build.rs"
links = "lua"

[dependencies]
anyhow = "1.0.52"
thiserror = "1.0.30"
byteorder = "1.4.3"
lazy_static = "1.4.0"
libc = "0.2.112"
clap = { version = "3.0.5", features = ["derive"] }
memmap2 = "0.5.1"
dashmap = "5.0.0"
ahash = "0.7.6"
bevy = { version = "0.6", features = ["dynamic"] } # TODO: don't do bevy dynlibs on release profile

[build-dependencies]
cc = "1.0.72"
bindgen = "0.59.2"
glob = "0.3"
