[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Natalia Cholewa <natanalt@proton.me>"]

# For the purposes of dependency organization, all crate definitions should be kept in the workspace
# manifest, listed below.

[workspace.dependencies]
zenit_lvl = { path = "crates/zenit_lvl" }
zenit_proc = { path = "crates/zenit_proc" }
zenit_lua = { path = "crates/zenit_lua" }
zenit_utils = { path = "crates/zenit_utils" }

anyhow = "1"
thiserror = "1"
byteorder = "1"
log = "0"
pretty_env_logger = "0" # TODO: write a custom log backend
derive_builder = "0"
toml = "0"
pollster = "0"
chrono = "0"
clap = { version = "3", features = ["derive"] }
smallvec = { version = "1", features = ["const_generics"] }
rustc-hash = "1"
once_cell = "1"
winit = "0"
glam = "0.22" # TODO: untie glam from 0.22 (downgraded glam to 0.22 from 0.23, as crevice depends on it)
crevice = { version = "0", features = ["glam"] }
wgpu = { version = "0" }
sealed = "0"
ordered-float = "3"
parking_lot = "0"
bitflags = "1"
crossbeam = "0"
rayon = "1"
include_dir = "0"
paste = "1"

# The `alloc` feature is necessary for Arc<Window> implementation.
raw-window-handle = { version = "0", features = ["alloc"] }

proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }

vergen = "7"
embed-resource = "1"
