[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Natalia Cholewa <natanalt@proton.me>"]

# For the purposes of dependency organization, all crate definitions should be kept in the workspace
# manifest, listed below.

[workspace.dependencies]
zenit_lvl = { path = "crates/zenit_lvl" }
zenit_lvl_proc = { path = "crates/zenit_lvl_proc" }
zenit_proc = { path = "crates/zenit_proc" }
zenit_lua = { path = "crates/zenit_lua" }
zenit_utils = { path = "crates/zenit_utils" }
zenit_mdk = { path = "crates/zenit_mdk" }

crevice = { path = "crates/crevice", features = ["glam"] }

# Fun fact: a lot of these should be evenutally cleaned up
#
# Zenit has grown a massive dependency hell, which *must* be taken care of.
# Have fun eventually staring at `cargo tree`...

anyhow = "1"
thiserror = "1"
byteorder = "1"
log = "0"
pretty_env_logger = "0" # TODO: write a custom log backend
derive_builder = "0"
toml = "0"
pollster = "0"
chrono = "0"
clap = { version = "4", features = ["derive"] }
smallvec = { version = "1", features = ["const_generics"] }
ahash = { version = "0", features = ["std"] }
once_cell = "1"
winit = "0"
glam = "0"
wgpu = { version = "0", features = ["expose-ids"] } # TODO: figure out how to not compile certain wgpu backends (leave just vulkan or smth)
ordered-float = "3"
parking_lot = "0"
bitflags = "1"
crossbeam = "0"
rayon = "1"
paste = "1"
image = { version = "0", features = ["png"], default-features = false }
wild = "2"
texpresso = "2" # TODO: replace with own solution for packaging DXT/BC/S3 compression
serde = { version = "1", features = ["derive"] }
itertools = "0"

# Guide to updating imgui:
#  - see how imgui-winit-support and imgui-wgpu handle things now
#  - fix what's broken
#  - then update and hope you fixed everything that's broken
imgui = { version = "0.11", features = ["tables-api"] }

# The `alloc` feature is necessary for Arc<Window> implementation.
raw-window-handle = { version = "0", features = ["alloc"] }

proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }

vergen = { version = "8", features = ["git", "rustc", "build", "gitoxide"] }
embed-resource = "1"
