[package]
name = "zenit"
description = "Open-source engine replacement for Star Wars Battlefront II (2005)"
version.workspace = true
edition.workspace = true
authors.workspace = true

build = "build/build.rs"
default-run = "zenit"

[features]
default = ["crash-handler"]

# Enables the custom crash/panic handler. It's enabled by default. If disabled, or if the platform
# doesn't support it, default Rust panic handler is used.
#
# ## Windows
# On Windows, a dedicated window is opened on crash. Once closed, default handler is invoked
# as well.
crash-handler = []

# Effective only on Windows. If set, Zenit is linked using the Windows subsystem, rather than
# the default console one.
no-console = []

[dependencies]
zenit_lvl.workspace = true
zenit_proc.workspace = true
zenit_lua.workspace = true
zenit_utils.workspace = true

anyhow.workspace = true
thiserror.workspace = true
byteorder.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
derive_builder.workspace = true
toml.workspace = true
pollster.workspace = true
chrono.workspace = true
clap.workspace = true
smallvec.workspace = true
rustc-hash.workspace = true
once_cell.workspace = true
winit.workspace = true
glam.workspace = true
crevice.workspace = true
wgpu.workspace = true
raw-window-handle.workspace = true

[build-dependencies]
derive_builder.workspace = true
vergen.workspace = true
embed-resource.workspace = true

[target.'cfg(windows)'.dependencies]
# TODO: replace winapi with the windows crate
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "commctrl"] }
