[package]
name = "zenit"
version = "0.1.0"
edition = "2021"
description = "Open-source engine replacement for Star Wars Battlefront II (2005)"
authors = ["Natalia Cholewa <natanalt@protonmail.com>"]

[dependencies]
zenit_lvl_core = { path = "../zenit_lvl_core" }
zenit_lvl = { path = "../zenit_lvl" }
zenit_proc = { path = "../zenit_proc" }
zenit_lua = { path = "../zenit_lua" }
zenit_utils = { path = "../zenit_utils" }
zenit_render = { path = "../zenit_render" }
anyhow = "1.0.57"
thiserror = "1.0.31"
log = "0.4.16"
pretty_env_logger = "0.4.0"
winit = "0.26.1"
chrono = "0.4.19"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "commctrl"] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.7.2"
