[package]
name = "zenit"
version = "0.1.0"
edition = "2021"
description = "Open-source engine replacement for Star Wars Battlefront II (2005)"
authors = ["Natalia Cholewa <natanalt@protonmail.com>"]
build = "build/build.rs"

[features]
default = ["crash-handler"]

# Enables the custom crash/panic handler. It's enabled by default.
# If disabled, or if the platform doesn't support it, default Rust panic
# handler is used.
#
# ## Windows
# On Windows, a dedicated window is opened on crash. Once closed, default
# handler is invoked as well.
crash-handler = []

# Effective only on Windows. If set, Zenit is linked using the Windows
# subsystem, rather than the default console one.
no-console = []

[dependencies]
zenit_lvl_core = { path = "../zenit_lvl_core" }
zenit_lvl = { path = "../zenit_lvl" }
zenit_proc = { path = "../zenit_proc" }
zenit_lua = { path = "../zenit_lua" }
zenit_utils = { path = "../zenit_utils" }

anyhow = "1.0.57"
thiserror = "1.0.31"
byteorder = "1.4.3"
log = "0.4.17"
pretty_env_logger = "0.4.0"
toml = "0.5.9"
pollster = "0.2.5"
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive"] }

winit = "0.26.1"
glam = "0.20.5"
wgpu = { version = "0.12.0", features = ["spirv"] }

# *wait, what?*
# Oh, yes! We're including Git versions of egui crates because:
#  a) egui-wgpu is unusable at version 0.18.0 due to a lack of:
#     * user textures,
#     * draw callbacks,
#     * any sort of custom draw integration whatso-fucking-ever
#  b) egui-wgpu got those fixes in the git repo...
#     ...across 2-4 weeks ago at the time of writing, which still
#     wasn't released into crates.io
# TODO: use proper egui dependencies once they are available.
egui = { git = "https://github.com/emilk/egui" }
egui-wgpu = { git = "https://github.com/emilk/egui" }
egui-winit = { git = "https://github.com/emilk/egui" }

#egui = "0.18.1"
#egui-wgpu = "0.18.0"
#egui-winit = "0.18.0"

# Explicitly importing a newer version with alloc crate, as it allows to pass
# Arc<Window> as a valid window handle, instead of requiring ownership or
# immutable borrows (wgpu includes an older one)
raw-window-handle = { version = "0.4.3", features = ["alloc"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "commctrl"] }

[build-dependencies]
which = "4.2.5"
derive_builder = "0.11.2"
vergen = "7.2.1"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.7.2"
