[package]
name = "zenit_lua"
version = "0.1.0"
edition = "2021"
description = "Bindings for Zenit's build of BF2 compatible Lua 5.0.2"
authors = ["Natalia Cholewa <natanalt@protonmail.com>"]

[dependencies]
zenit_utils = { path = "../zenit_utils", version = "*" }
anyhow = "1.0.52"
thiserror = "1.0.30"
byteorder = "1.4.3"
libc = "0.2.112"

[build-dependencies]
cc = "1.0.72"
bindgen = "0.59.2"
glob = "0.3"
