[package]
name = "zenit_lvl"
version = "0.1.0"
edition = "2021"
description = "SWBF2 level file reader and writer"
authors = ["Natalia Cholewa <natanalt@protonmail.com>"]

[dependencies]
zenit_proc = { path = "../zenit_proc" }
zenit_utils = { path = "../zenit_utils" }
anyhow = "1.0.57"
thiserror = "1.0.31"
byteorder = "1.4.3"
bitflags = "1.3.2"
