[package]
name = "zenit_render"
version = "0.1.0"
edition = "2021"
description = "Custom renderer for Zenit"
authors = ["Natalia Cholewa <natanalt@protonmail.com>"]

[dependencies]
zenit_utils = { path = "../zenit_utils" }
anyhow = "1.0.57"
thiserror = "1.0.31"
byteorder = "1.4.3"
glam = "0.20.5"
winit = "0.26.1"
wgpu = { version = "0.12.0", features = ["spirv"] }
pollster = "0.2.5"
toml = "0.5.9"
log = "0.4.17"

egui = "0.18.1"
egui-wgpu = "0.18.0"

# Explicitly importing a newer version with alloc crate, as it allows to pass
# Arc<Window> as a valid window handle, instead of requiring ownership or
# immutable borrows
raw-window-handle = { version = "0.4.3", features = ["alloc"] }

[build-dependencies]
which = "4.2.5"
derive_builder = "0.11.2"
